packages/widget/widget_scrollbar.css
.widget-scrollbar-vertical {
    overflow: hidden;
    position: relative;
    display:none;
    width:16px;
    background: #c0c0c0;
    border-left: 1px solid black;
    flex-direction:column;
}

.widget-scrollbar-vertical.vertical-scroll {
    display:flex;
}

.widget-scrollbar-horizontal {
    overflow: hidden;
    position: relative;
    flex:1;
    display:none;
    height:16px;
    background: #c0c0c0;
    border-top: 1px solid black;
}

.widget-scrollbar-horizontal.horizontal-scroll {
    display:flex;
}

.widget-scrollbar-horizontal-track {
    flex:1;
    margin-left:-1px;
}

.widget-scrollbar-vertical-track {
    flex:1;
    margin-top:-1px;
}

.widget-scrollbar-corner {
    width:16px;
    height:16px;
    border-left: 1px solid black;
    border-top: 1px solid black;
    position:relative;
    flex:none;
    display:none;
}

.widget-scrollbar-corner.vertical-scroll.horizontal-scroll {
    display:flex;
}

.widget-scrollbar-button {
    flex: none;
    width:16px;
    height:16px;
    background-color: #c0c0c0;
}

.widget-scrollbar-button:after {
    content: "";
    position: absolute;
    top:0px;
    width:14px;
    height:14px;
    border-left: 1px solid #ffffff;
    border-top: 1px solid #ffffff;
    border-right: 1px solid #808080;
    border-bottom: 1px solid #808080;
    box-shadow: inset -1px -1px 0px 0px #808080;
}

.widget-scrollbar-button:hover:active:after {
    border-left: 1px solid #808080;
    border-top: 1px solid #808080;
    border-right: 1px solid #ffffff;
    border-bottom: 1px solid #ffffff;
    box-shadow: inset -1px -1px 0px 0px #ffffff;
}

.widget-scrollbar-vertical-before-arrow {
    position: absolute;
    left:4px;
    top:4px;
    width: 0;
    height: 0;
    border-left: 3px solid transparent;
    border-right: 3px solid transparent;
    border-bottom: 4px solid black;
}

.widget-scrollbar-vertical-after-arrow {
    position: absolute;
    left:4px;
    top:7px;
    width: 0;
    height: 0;
    border-left: 3px solid transparent;
    border-right: 3px solid transparent;
    border-top: 4px solid black;
}

.widget-scrollbar-horizontal-before-arrow {
    position: absolute;
    left:4px;
    top:5px;
    width: 0;
    height: 0;
    border-top: 3px solid transparent;
    border-right: 4px solid black;
    border-bottom: 3px solid transparent;
}

.widget-scrollbar-horizontal-after-arrow {
    position: absolute;
    left:7px;
    top:5px;
    width: 0;
    height: 0;
    border-top: 3px solid transparent;
    border-left: 4px solid black;
    border-bottom: 3px solid transparent;
}

.widget-scrollbar-horizontal-before {
    border-right:1px solid black;
}

.widget-scrollbar-horizontal-after {
    border-left:1px solid black;
}

.widget-scrollbar-vertical-before {
    border-bottom:1px solid black;
}

.widget-scrollbar-vertical-after {
    border-top:1px solid black;
}

.widget-scrollbar-horizontal-thumb {
    border-left:1px solid black;
    border-right:1px solid black;
}

.widget-scrollbar-vertical-thumb {
    border-top:1px solid black;
    border-bottom:1px solid black;
}

